Fix command for Ubuntu